--- a/_posts/2016-03-18-Intro.md
+++ b/_posts/2016-03-18-Intro.md
@@ -1,25 +1,21 @@
 ---
-layout:	 default
+layout:	 post
 title:	 Introduction
 date:	 2016-03-20
 ---
-# How to write in Chinese?
+## How to write in Chinese?
 
 hello, this is a happy world!
 
----
-
-# 现在找到解决方案了
+## 现在找到解决方案了
 
 1. google [**sublime 中文输入**][info by google]
 2. 打开前几个链接， 查看了解别人的解决方案（eg: [解决Ubuntu下Sublime Text 3无法输入中文- 简书][solution]）
 3. 比较并找出最简单的办法（[Sublime Text 2/3 Input Method (Fcitx) Fix \[Ubuntu(Debian)\]][easiest way]）
 4. 按教程操作并检验效果，教程如下
 	1. 打开终端，克隆一个专门解决该问题的仓库（就是一个文件夹），输入如下：
-		
-		```
-		git clone https://github.com/lyfeyaj/sublime-text-imfix.git
-		```
+
+			git clone https://github.com/lyfeyaj/sublime-text-imfix.git
 	2. 然后打开该文件夹（sublime-text-imfix），输入如下：
 		
 			cd sublime-text-imfix
@@ -28,8 +24,6 @@ hello, this is a happy world!
 			./sublime-imfix
 	4. 到此，大功告成。然后重启sublime即可
 	5. **注意：**这个修复仅当在终端中使用 subl . 调用 Sublime Text 的时有效, 具体原因请看源代码[src/subl][bug`s reason]
-
----
 
 This is my [github`s address][github].
 
